(PC-32893)[PRO] fix: Remove the gap between adage header active tab line and bottom header line.

--- a/pro/src/pages/AdageIframe/app/components/AdageHeader/AdageHeaderBudget/AdageHeaderBudget.module.scss
+++ b/pro/src/pages/AdageIframe/app/components/AdageHeader/AdageHeaderBudget/AdageHeaderBudget.module.scss
@@ -33,7 +33,7 @@
   .adage-header-budget {
     border-left: 1px solid var(--color-grey-medium);
     border-top: none;
-    padding-left: 0 0 0 rem.torem(32px);
+    padding: 0 0 0 rem.torem(32px);
     width: unset;
 
     &-link {
